# trading-engine

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  access_token.py  active_order_state.py  csv_logging.py  fyers_token.py  logger.py  main.py  order_management.py  pyproject.toml  readme.md  requirements.md  requirements.txt  run_first_strategy.sh  shm_config.py  strategy_one.py  strategy_one_logic.py
centeral_hub/: event_bus.py
common_utils/: csv_builder.py
config/: setting.yml
csv/: trades_2025-09-05.csv
data_manager/: candle_builder.py  data_manager.py
data_model/: data_model.py
data_order_manager/: candle_data_websocket.py  order_websocket_manager.py  strategy_one_backup.py
data_position_websocket/: candle_builder.py  candle_data_websocket.py  high_logger_backup.py  order_websocket_manager.py  tick_processor.py
order_active_state_manager/: order_state_manager.py
order_manager/: order_manager.py  order_placement.py
order_placement_manager/: order_placement_manager.py
src/: config.yml
src/broker/: reader.py  registery.py  writer.py
src/candle_builder/: candle_builder.py  icandle_builder.py
src/config/: setting.yml  strategies.yml
src/strategies/: strategy_handler.py
strategies/: strategy_interface.py
strategies/strategy_one/: logic_manager.py  order_placement_manager.py  strategy_one.py  strategy_one_logic.py  strategy_one_trailling.py  trailing_manager.py  trailling_manager.py
strategy/: helper.py  strategy_one.py  strategy_one_logic.py
utils/: csv_builder.py  logger.py
websocket_manager/data_manager/: base.py  (+5 more)
(+7 files in other folders)
